# eden

./: .gitignore  EDE.md  README.md  eden_model.py  freezeout_analysis.py  generate_sbbn.py  hist.py  hubble_analysis.py  main.py  mc.py  mcmc.py  model.py  ns.py  ns_cloud.py  peek_ns.py  plot_ns.py  poly_priors.py  pyproject.toml  regenerate_all_plots.py  run_EDE.py  run_mcmc.py  sbbn_samples.csv  t_of_T.py  time_dependant_alpha.py
PRyM/: PRyM_init.py  PRyM_main.py  PRyM_thermo.py
