[project]
name = "eden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cobaya>=3.6.1",
    "dask>=2026.1.2",
    "dynesty>=3.0.0",
    "emcee>=3.1.6",
    "getdist>=1.7.5",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numbaquadpack",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "schwimmbad>=0.4.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
numbaquadpack = { git = "https://github.com/croi900/NumbaQuadpack" }
